Final final update

--- a/about.html
+++ b/about.html
@@ -82,7 +82,8 @@
         
         <div class="starter-template container lead-narrow">
         <h1>About Us</h1>
-        <p class="lead">The Animal Protection Society is a non-profit enterprise that aims to rescue homesless and injured strays off of the streets.<br>We rehabilitate them, reintroduce them to other dogs and humans, and rehome them to loving homes once they have reached their full health.</p>
+        <p class="lead">The Animal Protection Society is a non-profit enterprise that aims to rescue homesless and injured strays off of the streets.</p>
+        <p class="lead">We rehabilitate them, reintroduce them to other dogs and humans, and rehome them to loving homes once they have reached their full health.</p>
         </div>
 
       <!-- Marketing messaging and featurettes
