--- a/adopt-help.html
+++ b/adopt-help.html
@@ -82,28 +82,29 @@
         
         <div class="starter-template container lead-narrow">
         <h1>See you then!</h1>
-        <p class="lead">You will receive an email confirmation about your meeting date and time. We will see you at our shelter then. Please see our 'about' page for the location of our shelter. <br> See below for other ways to help us out.</p>
+        <p class="lead">You will receive an email confirmation about your meeting date and time. We will see you at our shelter then. Please see our 'about' page for the location of our shelter. </p>
+        <p class="lead">See below for other ways to help us out.</p>
         </div>
         
         <div class="container">
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Report a Stray</h1>
+        <h2 class="card-title pricing-card-title">Report a Stray</h2>
         <p>Our business can only succeed if we have some help from the public eye. We can not locate every stray dog ourselves, which is why we ask you to report a stray dog if you see one.</p><br><br>
         <p><a class="btn btn-secondary" href="report.html" role="button">Report Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Donate</h1>
+        <h2 class="card-title pricing-card-title">Donate</h2>
         <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue stray dogs. Your donation could help save a dogs life.</p>
          <p><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Volunteer</h1>
+        <h2 class="card-title pricing-card-title">Volunteer</h2>
         <p>We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out.</p><br>
         <p><a class="btn btn-secondary" href="volunteer.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
