--- a/adopt.html
+++ b/adopt.html
@@ -82,7 +82,9 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Adopt a Dog</h1>
-        <p class="lead">It is our mission to provide you with a perfectly healthy and social dog, so that they won't ever have to spend another night on the streets. All dogs will be registered, microchipped, desexed, vaccinated and flea and worm treated as part of the adoption process. <br>All proceeds go towards new equipment, dog food and toys, and petrol for transport to rescue other abandoned and stray dogs. <br>All customers wishing to adopt must undergo a compulsary background check, agree to our terms and conditions and fill out some documentation before you can make your payment and take your dog home.</p>
+        <p class="lead">It is our mission to provide you with a perfectly healthy and social dog, so that they won't ever have to spend another night on the streets. All dogs will be registered, microchipped, desexed, vaccinated and flea and worm treated as part of the adoption process. </p>
+        <p class="lead">All proceeds go towards new equipment, dog food and toys, and petrol for transport to rescue other abandoned and stray dogs. </p>
+        <p class="lead">All customers wishing to adopt must undergo a compulsary background check, agree to our terms and conditions and fill out some documentation before you can make your payment and take your dog home.</p>
         </div>
 
         <div class="container">
@@ -103,7 +105,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Tarn </h3><h5>Golden Retriever </h5>
-                    <p class="card-text">Tarn is a three year old Golden Retriever. Tarn is full of life and ready to be adopted by a loving person who is keen to take on this ball of energy. Tarn is fully house trained and gets on well with other dogs and kids, although he is not very fond of cats.</p><br>
+                    <p class="card-text">Tarn is a three year old Golden Retriever. Tarn is full of life and ready to be adopted by a loving person who is keen to take on this ball of energy. Tarn is fully house trained and gets on well with other dogs and kids, although he is not very fond of cats.</p>
                     <p><a class="btn btn-secondary" href="adopt-tarn.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
@@ -134,7 +136,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Mickey</h3><h5> Labrador</h5> 
-                    <p class="card-text">Mickey is a 7 month old Labrador puppy. He is full of energy and requires a walk every day to burn off some steam. Mickey has not been desexed so he will need to come back for a visit when the time comes, but this will be free of charge.</p>
+                    <p class="card-text">Mickey is a 7 month old Labrador puppy. He is full of energy and requires a walk every day to burn off some steam. Mickey has not been desexed so he will need to come back for a visit when the time comes, but this will be free of charge.</p><br>
                     <p><a class="btn btn-secondary" href="adopt-mickey.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
@@ -144,7 +146,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Belle </h3> <h5>Labrador x Collie</h5> 
-                    <p class="card-text">Belle is a Labrador Collie cross. She is 1 year old and loves to play with other dogs. She is very gentle and does well with kids and cats. Belle would be best suited in a home with other social dogs. She is very polite and she has great recall.</p>
+                    <p class="card-text">Belle is a Labrador Collie cross. She is 1 year old and loves to play with other dogs. She is very gentle and does well with kids and cats. Belle would be best suited in a home with other social dogs. She is very polite and she has great recall.</p><br>
                     <p><a class="btn btn-secondary" href="adopt-belle.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
