--- a/donate-equipment.html
+++ b/donate-equipment.html
@@ -82,28 +82,29 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Donate Equipment</h1>
-        <p class="lead">We are always happy to receive equipment for our business. We look for blankets, towels, dog toys, dog food, leashes, collars, dog treats and other essentials such as paper towels, cleaning products, gloves and hand sanitiser. <br>To donate equipment, please drop it to our shelter. Please see our 'about' page for our shelter location. Below are some more ways to help.</p>
+        <p class="lead">We are always happy to receive equipment for our business. We look for blankets, towels, dog toys, dog food, leashes, collars, dog treats and other essentials such as paper towels, cleaning products, gloves and hand sanitiser. </p>
+        <p class="lead">To donate equipment, please drop it to our shelter. Please see our 'about' page for our shelter location. Below are some more ways to help.</p>
         </div>
         
         <div class="container">
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Adopt</h1>
+        <h2 class="card-title pricing-card-title">Adopt</h2>
         <p>Adopting a dog today can mean happiness for you, your family and your new dog. By adopting through APS, you are not only saving one dogs life, but also contibuting to the saving of many other dogs out there that are yet to be rescued.</p>
         <p><a class="btn btn-secondary" href="adopt.html" role="button">Adopt Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Report a Stray</h1>
+        <h2 class="card-title pricing-card-title">Report a Stray</h2>
         <p>Our business can only succeed if we have some help from the public eye. We can not locate every stray dog ourselves, which is why we ask you to report a stray dog if you see one.</p><br><br>
          <p><a class="btn btn-secondary" href="report.html" role="button">Donate Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Volunteer</h1>
+        <h2 class="card-title pricing-card-title">Volunteer</h2>
         <p>We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out.</p><br>
         <p><a class="btn btn-secondary" href="volunteer.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
