--- a/donate-money.html
+++ b/donate-money.html
@@ -129,7 +129,9 @@
             </div>
           </div>
 
-        <a class="btn btn-secondary btn-lg btn-block" href="donate-payment.html" role="button">Proceed to Payment</a>
+        <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="donate-payment.html" role="button">Proceed to Payment &raquo;</a></li></ul>
+    </div><br><br><br>
       </form>
         
         </div>
