--- a/donate-payment.html
+++ b/donate-payment.html
@@ -120,7 +120,9 @@
           </div>
         </div>
 
-        <a class="btn btn-secondary btn-lg btn-block" href="donate-thanks.html" role="button">Submit Payment</a>
+        <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="donate-thanks.html" role="button">Submit Payment &raquo;</a></li></ul>
+    </div><br><br><br>
       </form>
         
         </div>
