--- a/meeting.html
+++ b/meeting.html
@@ -136,7 +136,9 @@
           </div>
         </div>
 
-          <a class="btn btn-secondary btn-lg btn-block" href="adopt-help.html" role="button">Submit</a>
+          <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="adopt-help.html" role="button">Submit &raquo;</a></li></ul>
+    </div><br><br><br>
           
       </form>
         
