--- a/report-help.html
+++ b/report-help.html
@@ -82,28 +82,29 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Thank-you!</h1>
-        <p class="lead">You will receive an email if we need any more information from you. We thank you for your help towards saving a dog's life. <br> See below for other ways to help us out.</p>
+        <p class="lead">You will receive an email if we need any more information from you. We thank you for your help towards saving a dog's life. </p>
+        <p class="lead">See below for other ways to help us out.</p>
         </div>
         
        <div class="container">
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Adopt</h1>
+        <h2 class="card-title pricing-card-title">Adopt</h2>
         <p>Adopting a dog today can mean happiness for you, your family and your new dog. By adopting through APS, you are not only saving one dogs life, but also contibuting to the saving of many other dogs out there that are yet to be rescued.</p>
         <p><a class="btn btn-secondary" href="adopt.html" role="button">Adopt Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Donate</h1>
+        <h2 class="card-title pricing-card-title">Donate</h2>
         <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue stray dogs. Your donation could help save a dogs life.</p>
          <p><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Volunteer</h1>
+        <h2 class="card-title pricing-card-title">Volunteer</h2>
         <p>We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out.</p><br>
         <p><a class="btn btn-secondary" href="volunteer.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
