--- a/report.html
+++ b/report.html
@@ -137,7 +137,9 @@
           </div>
        
 
-        <a class="btn btn-secondary btn-lg btn-block" href="report-help.html" role="button">Submit Report</a>
+        <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="report-help.html" role="button">Submit Report &raquo;</a></li></ul>
+    </div><br><br><br>
       </form>
         
         </div>
