--- a/review-leave.html
+++ b/review-leave.html
@@ -117,7 +117,9 @@
           <input type="text" class="form-control" id="review" placeholder="6/10">
         </div>
 
-        <a class="btn btn-secondary btn-lg btn-block" href="review-thanks.html" role="button">Submit Review</a>
+        <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="review-thanks.html" role="button">Submit Review &raquo;</a></li></ul>
+    </div><br><br><br>
       </form>
 
         </div>
