--- a/volunteer-help.html
+++ b/volunteer-help.html
@@ -82,28 +82,29 @@
         
         <div class="starter-template container lead-narrow">
         <h1>You'll hear from us soon!</h1>
-        <p class="lead">You will receive an email in 2-3 business days letting you know if you have reached our criteria.   <br> See below for other ways to help us out.</p>
+        <p class="lead">You will receive an email in 2-3 business days letting you know if you have reached our criteria.</p>
+        <p class="lead">See below for other ways to help us out.</p>
         </div>
         
         <div class="container">
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Adopt</h1>
+        <h2 class="card-title pricing-card-title">Adopt</h2>
         <p>Adopting a dog today can mean happiness for you, your family and your new dog. By adopting through APS, you are not only saving one dogs life, but also contibuting to the saving of many other dogs out there that are yet to be rescued.</p>
         <p><a class="btn btn-secondary" href="adopt.html" role="button">Adopt Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Donate</h1>
+        <h2 class="card-title pricing-card-title">Donate</h2>
         <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue stray dogs. Your donation could help save a dogs life.</p>
          <p><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Report a Stray</h1>
+        <h2 class="card-title pricing-card-title">Report a Stray</h2>
         <p>Our business can only succeed if we have some help from the public eye. We can not locate every stray dog ourselves, which is why we ask you to report a stray dog if you see one.</p><br><br>
         <p><a class="btn btn-secondary" href="report.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
