--- a/volunteer-questionnaire.html
+++ b/volunteer-questionnaire.html
@@ -82,7 +82,8 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Become a Volunteer</h1>
-        <p class="lead">We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out. The work that our volunteers do does not go unnoticed. We have a 3-monthly dinner paid for by senior management to celebrate the hard work our volunteers do.</p>
+        <p class="lead">We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out.</p>
+        <p class="lead">The work that our volunteers do does not go unnoticed. We have a 3-monthly dinner paid for by senior management to celebrate the hard work our volunteers do.</p>
         </div>
           
     <div class="col-md-8 order-md-1 container">
@@ -145,7 +146,9 @@
             </div>
           </div>
 
-        <a class="btn btn-secondary btn-lg btn-block" href="volunteer-help.html" role="button">Submit Questionnaire</a>
+        <div class="float">   
+    <ul><li><a class="btn btn-secondary" href="volunteer-help.html" role="button">Submit Questionnaire &raquo;</a></li></ul>
+    </div><br><br><br>
       </form>
 
         </div>
