--- a/volunteer.html
+++ b/volunteer.html
@@ -82,28 +82,29 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Become a Volunteer</h1>
-        <p class="lead">We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out. The work that our volunteers do does not go unnoticed. We have a 3-monthly dinner paid for by senior management to celebrate the hard work our volunteers do.</p>
+        <p class="lead">We rely quite heavily on willing volunteers to help keep this business running smoothly. We have a variety of different fields needing volunteers and we are always looking for new and confident individuals to help us out.</p>
+        <p class="lead">The work that our volunteers do does not go unnoticed. We have a 3-monthly dinner paid for by senior management to celebrate the hard work our volunteers do.</p>
         </div>
         
          <div class="container">
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Dog Rescue</h1>
+        <h2 class="card-title pricing-card-title">Dog Rescue</h2>
         <p>Quite often, we are called out to mulitple different locations for dog rescue at the same time. Our dog rescue volunteers allow us to be at multiple locations at one time, so more dogs can be rescued.<br><br><br><br></p>
         <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Apply Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Dog Walking</h1>
+        <h2 class="card-title pricing-card-title">Dog Walking</h2>
         <p>We offer a very special dog walking programme where members of the public who are either looking to adopt a dog, or who can't quite afford a dog yet but would still like to form a special bond with some furry friends, can come into our shelter and take a dog for a walk around the block, assisted by one of our volunteers.</p>
          <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Apply Now &raquo;</a></p>
       </div>
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
-        <h1 class="card-title pricing-card-title">Dog Socialising</h1>
+        <h2 class="card-title pricing-card-title">Dog Socialising</h2>
         <p>We rescue dogs on a regular basis that need a bit more attention than others. If a dog has been on its own for long enough, the level of trust it may hold for other dogs and humans may plummit. We require volunteers to assist in dog socialising, to maintain a high level of safety for our dogs.</p><br>
         <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Apply Now &raquo;</a></p>
       </div>
