--- a/adopt-olive.html
+++ b/adopt-olive.html
@@ -82,7 +82,9 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Adopt a Dog</h1>
-        <p class="lead">It is our mission to provide you with a perfectly healthy and social dog, so that they won't ever have to spend another night on the streets. All dogs will be registered, microchipped, desexed, vaccinated and flea and worm treated as part of the adoption process. <br>All proceeds go towards new equipment, dog food and toys, and petrol for transport to rescue other abandoned and stray dogs. <br>All customers wishing to adopt must undergo a compulsary background check, agree to our terms and conditions and fill out some documentation before you can make your payment and take your dog home for the first time.</p>
+        <p class="lead">It is our mission to provide you with a perfectly healthy and social dog, so that they won't ever have to spend another night on the streets. All dogs will be registered, microchipped, desexed, vaccinated and flea and worm treated as part of the adoption process. </p>
+        <p class="lead">All proceeds go towards new equipment, dog food and toys, and petrol for transport to rescue other abandoned and stray dogs. </p>
+        <p class="lead">All customers wishing to adopt must undergo a compulsary background check, agree to our terms and conditions and fill out some documentation before you can make your payment and take your dog home.</p>
         </div>
 
       <!-- Marketing messaging and featurettes
